fork patience for lxqt-frost

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,49 +1,4 @@
-sddm-theme-patience (2016.1.0-1) unstable; urgency=medium
-
-  * the release is near
-
- -- Alf Gaida <agaida@siduction.org>  Fri, 23 Dec 2016 22:36:24 +0100
-
-sddm-theme-patience (2016.1.0~alpha-7) unstable; urgency=medium
-
-  * new bootstrap fix the kcm issue 
-
- -- Alf Gaida <agaida@siduction.org>  Thu, 01 Sep 2016 18:28:06 +0200
-
-sddm-theme-patience (2016.1.0~alpha-6) unstable; urgency=medium
-
-  * package is all instead of any
-
- -- Alf Gaida <agaida@siduction.org>  Thu, 01 Sep 2016 02:51:40 +0200
-
-sddm-theme-patience (2016.1.0~alpha-5) unstable; urgency=medium
-
-  * install preview.jpg again
-  * bumped copyright years
-  * fixed copyright files
-
- -- Alf Gaida <agaida@siduction.org>  Thu, 01 Sep 2016 01:22:53 +0200
-
-sddm-theme-patience (2016.1.0~alpha-4) unstable; urgency=medium
-
-  * cherry-picked latest changes from templates branch 
-  * new bootstrap
-
- -- Alf Gaida <agaida@siduction.org>  Wed, 31 Aug 2016 00:00:58 +0200
-
-sddm-theme-patience (2016.1.0~alpha-3) unstable; urgency=medium
-
-  * update configurations 
-
- -- Alf Gaida <agaida@siduction.org>  Tue, 30 Aug 2016 22:43:16 +0200
-
-sddm-theme-patience (2016.1.0~alpha-2) unstable; urgency=medium
-
-  * bootstrapped the latest template changes, thanks hendrikL 
-
- -- Alf Gaida <agaida@siduction.org>  Tue, 30 Aug 2016 20:58:25 +0200
-
-sddm-theme-patience (2016.1.0~alpha-1) unstable; urgency=medium
+sddm-theme-lxqt-frost (0.11.1~1) unstable; urgency=medium
 
   * Initial release
 
